--- a/frontend/src/components/Dropdown/Dropdown.css
+++ b/frontend/src/components/Dropdown/Dropdown.css
@@ -13,6 +13,10 @@
   box-shadow: var(--box-shadow);
 }
 
+.fixed-nav.dropdown-list {
+  right: -700%;
+}
+
 .dropdown-list h3 {
   font-weight: 200;
 }
