--- a/frontend/src/container/Home/Home.css
+++ b/frontend/src/container/Home/Home.css
@@ -1,10 +1,28 @@
 
 
+.newest-products{
+  min-height: 100vh;
+}
+
+.newest-products-list{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 2rem;
+  width: 90%;
+  margin: 2rem auto;
+
+}
+
+
 .images-box{
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 1rem;
   margin-bottom: 1rem;
+}
+
+.images-box > .img-style {
+  object-fit: contain;
 }
 
 .images-box > .img-container {
@@ -13,12 +31,18 @@
 
 
 @media screen and (max-width: 568px){
+  .newest-products-list{
+    grid-template-columns: 1fr;
+  }
   .images-box{
     grid-template-columns: 1fr;
   }
 }
 
 @media screen and (min-width: 569px) and (max-width: 800px){
+  .newest-products-list{
+    grid-template-columns: 1fr 1fr;
+  }
   .images-box{
     grid-template-columns: 1fr 1fr;
   }
