--- a/frontend/src/container/MainProduct/MainProduct.css
+++ b/frontend/src/container/MainProduct/MainProduct.css
@@ -1,8 +1,4 @@
-
-
-.main-product{
-
-}
+.main-product {}
 
 .main-product .main-product-body {
   display: grid;
@@ -10,7 +6,7 @@
   gap: 2rem;
 }
 
-.product-slider{
+.product-slider {
   height: 100%;
   display: flex;
   align-items: center;
@@ -19,42 +15,45 @@
 }
 
 
-.main-product .main-product-body .product-infos{
+.main-product .main-product-body .product-infos {
   display: flex;
   flex-direction: column;
   gap: .5rem;
 }
 
-.main-product .main-product-body .product-infos .product-des{
+.main-product .main-product-body .product-infos .product-des {
   text-align: justify;
 }
 
-.main-product .main-product-body .product-infos > h4 {
+.main-product .main-product-body .product-infos>h4 {
   font-size: 25px;
   margin-bottom: 1rem;
 }
-.main-product .main-product-body .product-infos > .product-price {
+
+.main-product .main-product-body .product-infos>.product-price {
   font-size: 25px;
   font-weight: 900;
 }
+
 .main-product .main-product-body .product-infos .product-reviews {
   display: flex;
   gap: .5rem;
   align-items: center;
 }
-.main-product .main-product-body .product-infos .product-reviews .product-stars{
+
+.main-product .main-product-body .product-infos .product-reviews .product-stars {
   color: #cfa005;
   display: flex;
   align-items: center;
 }
 
-.main-product .main-product-body .product-infos .product-actions{
+.main-product .main-product-body .product-infos .product-actions {
   display: flex;
   gap: .5rem;
   margin-bottom: 2rem;
 }
 
-.control-product-count{
+.control-product-count {
   background-color: var(--color-secondary);
   padding: .5rem;
   display: flex;
@@ -67,18 +66,87 @@
   font-weight: 900;
 }
 
-.control-product-count .product-plus,.product-minus {
+.control-product-count .product-plus,
+.product-minus {
   cursor: pointer;
   transition: var(--transition-element);
 }
 
-.control-product-count .product-plus:hover,.product-minus:hover {
+.control-product-count .product-plus:hover,
+.product-minus:hover {
   color: var(--color-primary);
 }
 
 .related-products .related-products-list {
   display: grid;
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 1rem;
   margin-bottom: 2rem;
 }
+
+.customer-reviews {
+  width: 40%;
+  margin: 2rem auto;
+}
+
+
+.customer-reviews-title {
+  text-align: center;
+  font-weight: 900;
+  font-size: 15px;
+  margin: 1rem 0;
+}
+
+.customer-review-item {
+  padding: .5rem;
+  border: 1px solid #cbc5c5;
+  border-radius: 3px;
+  margin: .5rem;
+}
+
+.customer-review-item .customer-name{
+  font-weight: 900;
+  font-size: 12px;
+}
+.customer-review-item .customer-rate{
+  color: #cfa005;
+}
+.customer-review-item .customer-review-date{
+  font-weight: 100;
+  font-size: 10px;
+}
+.customer-review-item .customer-review{}
+
+.customer-review-item>div {
+  margin-top: .5rem;
+}
+
+.customer-reviews-form form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 3rem;
+
+}
+
+.customer-reviews-form form > div,select,label {
+  margin-top: 1rem;
+  width: 100%;
+  font-family: vazir;
+}
+
+.customer-reviews-form form label {
+  display: flex;
+  flex-direction: column;
+  gap: .2rem;
+}
+
+.customer-reviews-form form textarea {
+  border: 1px solid #d2d2d2;
+  outline: none;
+}
+
+.signin-message{
+  text-align: center;
+  margin: 2rem 0;
+}
+
