--- a/frontend/src/components/ProductStyle/ProductStyle.css
+++ b/frontend/src/components/ProductStyle/ProductStyle.css
@@ -1,10 +1,20 @@
 .product {
-  min-height: 40vh;
   overflow: hidden;
   gap: .3rem;
   transition: var(--transition-element);
   background-color: #ffffff;
 }
+
+.product-one {
+  min-height: 40vh;
+}
+
+.product-two {
+  min-height: 25vh;
+  border-radius: 10px;
+}
+
+
 
 .product:hover {
   box-shadow: var(--box-shadow);
@@ -12,14 +22,30 @@
 
 .product .product-inner {
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 
+.product-inner-one{
+  flex-direction: column;
+}
+
+.product-inner-two{
+  flex-direction: row;
+  justify-content: space-around;
+}
+
 .product .product-inner .product-img{
+  position: relative;
+}
+
+.product .product-inner-one .product-img{
   width: 100%;
   height: 200px;
-  position: relative;
+  
+}
+.product .product-inner-two .product-img{
+  width: 30%;
+  height: 200px;
 }
 
 .product .product-inner .product-img img {
@@ -71,12 +97,22 @@
   font-weight: 900;
 }
 
+
 .product .product-inner .product-rating-and-stock{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
 }
+
+.product .product-inner-two .product-rating-and-stock{
+  width: fit-content;
+}
+
+.product .product-inner-two .product-rating-and-stock{
+  flex-direction: column;
+}
+
 
 .product .product-inner .product-rating-and-stock .Available-in-stock {
   font-weight: 200;
