--- a/frontend/src/container/ِDashboardAdmin/DashboardAdmin.css
+++ b/frontend/src/container/ِDashboardAdmin/DashboardAdmin.css
@@ -76,7 +76,7 @@
 
 }
 
-.website-infos {
+.website-summery-infos {
   border-radius: 20px;
   min-height: 70vh;
   background-color: #fff;
@@ -89,7 +89,7 @@
   justify-content: center;
 }
 
-.website-infos > div{
+.website-summery-infos > div{
   width: 30%;
   height: 100px;
   border-radius: 10px;
@@ -100,7 +100,7 @@
   justify-content: center;
 }
 
-.website-infos > div >h3,h5{
+.website-summery-infos > div >h3,h5{
   margin: 0;
 }
 
@@ -114,7 +114,7 @@
     margin-bottom: 1rem;
   }
 
-  .website-infos > div{
+  .website-summery-infos > div{
     width: 80%;
   }
 }
