--- a/frontend/src/container/ProductsScreen/ProductsScreen.css
+++ b/frontend/src/container/ProductsScreen/ProductsScreen.css
@@ -93,7 +93,7 @@
     grid-template-columns: 1fr;
   } 
 
-  .products .products-body .products-inner .products-list{
+  .products .products-body .products-inner .products-list-one{
     grid-template-columns: 1fr;
   }
 
