--- a/frontend/src/container/UserEdit/UserEdit.css
+++ b/frontend/src/container/UserEdit/UserEdit.css
@@ -35,4 +35,13 @@
   .register .register-body form {
     padding: 10px;
   }
+
+  .edit-user .edit-user-body {
+    width: 90%;
+  }
+
+  .edit-user .edit-user-body form label{
+    flex-direction: row;
+    align-items: center;
+  }
 }
