--- a/frontend/src/container/CartPage/CartPage.css
+++ b/frontend/src/container/CartPage/CartPage.css
@@ -46,6 +46,9 @@
 .cart-page-item-total-price{
 
 }
+.cart-page-item-price{
+
+}
 
 .cart-page-item-remove-product{
   cursor: pointer;
@@ -111,6 +114,45 @@
 
 .cart-page-count-product p:nth-child(2){
   font-weight: 100;
+}
+
+
+@media screen and (max-width: 568px){
+  .cart-page-item{
+    width: 95%;
+    gap: .1rem;
+  }
+
+  .cart-page-item-total-price{
+    font-size: 10px;
+    font-weight: 900;
+  }
+  .cart-page-item-price{
+    font-size: 10px;
+    font-weight: 900;
+  }
+  .cart-page-item-title{
+    font-size: 10px;
+    font-weight: 900;
+    color: #000;
+  }
+
+  .control-product-count{
+    font-size: 15px;
+  }
+
+  .cart-page-control{
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .cart-page-control .button-style{
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 569px) and (max-width: 800px){
+  
 }
 
 
