--- a/frontend/src/container/Contact/Contact.css
+++ b/frontend/src/container/Contact/Contact.css
@@ -58,3 +58,17 @@ p{
   grid-template-columns: 1fr;
   padding: 2rem;
 }
+
+@media screen and (max-width: 568px){
+  .contact .contact-body{
+    grid-template-columns: 1fr;
+  }
+
+  .contact .contact-body .contact-info{
+  border-radius:0;
+}
+}
+
+@media screen and (min-width: 569px) and (max-width: 800px){
+  
+}
