--- a/frontend/src/container/ShippingPage/ShippingPage.css
+++ b/frontend/src/container/ShippingPage/ShippingPage.css
@@ -20,3 +20,13 @@
 .shipping-page .checkout-steps .checkout-progress {
   width: 30%;
 }
+
+@media screen and (max-width: 568px){
+  .shipping-form{
+    width: 90%;
+  }
+}
+
+@media screen and (min-width: 569px) and (max-width: 800px){
+  
+}
