--- a/frontend/src/components/ProductStyle/ProductStyle.css
+++ b/frontend/src/components/ProductStyle/ProductStyle.css
@@ -116,6 +116,31 @@
   margin: 0;
 }
 
+@media screen and (max-width: 568px){
+
+.product-two {
+  min-height: 40vh;
+}
+  
+  .product-inner-two{
+  flex-direction: column;
+}
+  
+  .product .product-inner-two .product-img{
+  width: 100%;
+  height: 200px;
+}
+  
+  
+.product .product-inner-two .product-rating-and-stock{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+}
+
 
 @media screen and (min-width: 568px){
 
@@ -137,9 +162,7 @@
   
 .product .product-inner-two .product-rating-and-stock{
   width: fit-content;
-}
-
-.product .product-inner-two .product-rating-and-stock{
   flex-direction: column;
 }
+
 }
